# data-gov-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  ISSUES.md  README.md  codegen-api.sh
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: api_support.md  bug_report.md  documentation.md  feature_request.md
.github/instructions/: rust.instructions.md  target-info.instructions.md
.github/workflows/: ci.yml  release.yml
data-gov/: Cargo.toml  README.md  demo.sh
data-gov-catalog/: Cargo.toml  README.md
data-gov-catalog/src/: client.rs  lib.rs  models.rs
data-gov-catalog/tests/: client_tests.rs  integration_tests.rs
data-gov-catalog/tests/fixtures/: harvest_record_transformed.json  keywords.json  locations_search.json  organizations.json  search.json  search_by_slug.json  search_filtered.json
data-gov-ckan/: Cargo.toml  README.md
data-gov-ckan/examples/: debug_search.rs  raw_response.rs
data-gov-ckan/src/: client.rs  client.rs.backup  lib.rs
data-gov-ckan/src/apis/: action_apiv3_api.rs  autocomplete_api.rs  configuration.rs  mod.rs
data-gov-ckan/src/models/: _util_dataset_autocomplete_get_200_response.rs  _util_dataset_autocomplete_get_200_response_result_set.rs  _util_resource_format_autocomplete_get_200_response.rs  _util_resource_format_autocomplete_get_200_response_result_set.rs  _util_resource_format_autocomplete_get_200_response_result_set_result_inner.rs  _util_tag_autocomplete_get_200_response.rs  _util_tag_autocomplete_get_200_response_result_set.rs  _util_tag_autocomplete_get_200_response_result_set_result_inner.rs  action_response.rs  api_version_response.rs  dataset_autocomplete.rs  error_response.rs  error_response_error.rs  extra.rs  group.rs  group_autocomplete.rs  license.rs  mod.rs  organization_autocomplete.rs  package.rs  package_search_result.rs  resource.rs  status_info.rs  tag.rs  user.rs  user_autocomplete.rs  validation_error_response.rs  validation_error_response_error.rs  vocabulary.rs
data-gov-ckan/tests/: client_tests.rs  integration_tests.rs  solr_syntax_ci.rs  solr_syntax_tests.rs  unit_tests.rs
data-gov-mcp-server/: Cargo.toml  README.md
data-gov-mcp-server/src/: dispatch_tests.rs  handlers.rs  main.rs  server.rs  tools.rs  types.rs
data-gov/examples/: demo.rs  workflow.sh
data-gov/src/: client.rs  colors.rs  config.rs  error.rs  lib.rs  main.rs  util.rs
data-gov/src/cli/: mod.rs
data-gov/src/ui/: mod.rs
data-gov/tests/: client_tests.rs  download_tests.rs  solr_syntax_ci.rs
data-gov/tests/fixtures/: dataset_autocomplete.json  organization_autocomplete.json  organization_list.json  package_search.json  package_search_filtered.json  package_show.json
data-gov/tools/cli/: main.rs
data-gov/tools/cli/ui/: colors.rs  commands.rs  display.rs  handlers.rs  mod.rs  repl.rs  reporter.rs
examples/scripting/: README.md  auto-download.sh  climate-search.sh  data-discovery.sh  download-epa-climate.sh  list-orgs.sh
examples/vscode-workspace/.github/instructions/: mcp-server-usage.instructions.md
