[package]
rust-version = "1.90"
license = "Apache-2.0"
repository = "https://github.com/dspadea/data-gov-rs"
name = "data-gov-catalog"
version = "0.4.0"
authors = ["David Spadea"]
description = "Async client for the data.gov Catalog API (DCAT-US 3 search)"
edition = "2024"
homepage = "https://github.com/dspadea/data-gov-rs"


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
wiremock = "0.6"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
