[package]
license = "Apache-2.0"
repository = "https://github.com/dspadea/data-gov-rs"
name = "data-gov-ckan"
version = "0.1.0"
authors = ["David Spadea"]
description = "Client for Data.Gov CKAN"
edition = "2024"


[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
