[package]
rust-version = "1.90"
name = "data-gov-mcp-server"
version = "0.1.0"
edition = "2024"

description = "MCP Server for AI integration with Data.Gov"
license = "Apache-2.0"
repository = "https://github.com/dspadea/data-gov-rs"
keywords = ["data", "government", "api", "ckan", "cli", "mcp", "ai"]
categories = ["api-bindings", "command-line-utilities", "web-programming", "ai", "mcp"]
authors = ["David Spadea"]
homepage = "https://github.com/dspadea/data-gov-rs"


[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3"
data-gov = "0.1.1"
data-gov-ckan = "0.1.1"
