[package]
name = "data-gov"
version = "0.1.0"
edition = "2021"
description = "Rust client library and CLI for data.gov - search, explore, and download U.S. government datasets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/data-gov-rs"
keywords = ["data", "government", "api", "ckan", "cli"]
categories = ["api-bindings", "command-line-utilities", "web-programming"]

[[bin]]
name = "data-gov"
path = "src/main.rs"

[dependencies]
data-gov-ckan = { path = "../data-gov-ckan"}
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
# REPL and CLI dependencies
rustyline = "14.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
is-terminal = "0.4"
# File I/O and async
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Progress bars and user experience
indicatif = { version = "0.17", features = ["tokio"] }
# URL parsing
url = "2.5"
# Cross-platform directories
dirs = "5.0"

