[package]
rust-version = "1.90"
name = "data-gov"
version = "0.1.1"
edition = "2024"
description = "Rust client library and CLI for data.gov - search, explore, and download U.S. government datasets"
license = "Apache-2.0"
repository = "https://github.com/dspadea/data-gov-rs"
keywords = ["data", "government", "api", "ckan", "cli"]
categories = ["api-bindings", "command-line-utilities", "web-programming"]
authors = ["David Spadea"]
homepage = "https://github.com/dspadea/data-gov-rs"

[[bin]]
name = "data-gov"
path = "tools/cli/main.rs"

[dependencies]
data-gov-ckan = "0.1.1"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
# REPL and CLI dependencies
rustyline = "14.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
is-terminal = "0.4"
# File I/O and async
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Progress bars and user experience
indicatif = { version = "0.17", features = ["tokio"] }
# URL parsing
url = "2.5"
# Cross-platform directories
dirs = "5.0"

