[package]
rust-version = "1.90"
name = "data-gov"
version = "0.4.0"
edition = "2024"
description = "Rust client library and CLI for data.gov - search, explore, and download U.S. government datasets"
license = "Apache-2.0"
repository = "https://github.com/dspadea/data-gov-rs"
keywords = ["data", "government", "api", "ckan", "cli"]
categories = ["api-bindings", "command-line-utilities", "web-programming"]
authors = ["David Spadea"]
homepage = "https://github.com/dspadea/data-gov-rs"

[[bin]]
name = "data-gov"
path = "tools/cli/main.rs"

[dependencies]
data-gov-ckan = "0.4.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
# REPL and CLI dependencies
rustyline = "17.0.2"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
is-terminal = "0.4"
# File I/O and async
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Progress bars and user experience
indicatif = { version = "0.18.1", features = ["tokio"] }
# URL parsing
url = "2.5"
# Cross-platform directories
dirs = "6.0"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tempfile = "3"

